terraform_criacao_ec2_freetier/vpc_conection.tf
resource "aws_vpc" "vpc_name_freetier" {
  cidr_block       = "10.0.0.0/16"
  instance_tenancy = "default"
  
  enable_dns_support   = true
  enable_dns_hostnames = true
  enable_classiclink   = false

  tags = {
    Name = "vpc_name_freetier"
  }
}
